Change texts in reference ticket

--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -77,7 +77,7 @@
     "status-inactive": "inaktiv",
     "3-g-evidence-invalid": "kein Gültiger 3-G-Nachweis auf diesem Gerät gefunden",
     "3-g-evidence-invalid-text": "Eventuell haben Sie Ihren Nachweis auf einem anderen Gerät importiert, der Nachweis ist nicht mehr gültig oder die Applikation wurde für einen längeren Zeitraum nicht genutzt.",
-    "3-g-evidence-maximize-saving": "Fügen Sie die App auf dem Startbildschirm hinzu, um die Speicherdauer des 3-G-Nachweises zu maximieren.",
+    "3-g-evidence-maximize-saving": "Fügen Sie die App auf dem Startbildschirm Ihres Smartphones hinzu, um die Speicherdauer des 3-G-Nachweises zu maximieren.",
     "new-ticket": "Neues Ticket anfordern",
     "internal-test-found": "Universitätsinterner Test gefunden",
     "internal-test-text": "Der universitätsinterne Test wurde beim Import validiert. Eine manuelle Kontrolle ist nur mit dem Originaldokument möglich.",
