--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -77,7 +77,7 @@
     "status-inactive": "inactive",
     "3-g-evidence-invalid": "No valid 3-G evidence found on this device",
     "3-g-evidence-invalid-text": "You may have imported your evidence on another device, the evidence is no longer valid or the application has not been used for a longer period of time.",
-    "3-g-evidence-maximize-saving": "Add the app to the home screen to maximize the storage time of the 3-G evidence. How to do this you can read ",
+    "3-g-evidence-maximize-saving": "Add the app to the home screen of your smartphone to maximize the storage time of the 3-G evidence. How to do this you can read ",
     "new-ticket": "Request a new ticket",
     "internal-test-found": "University-internal test found",
     "internal-test-text": "The university-internal test was validated during the import. A manual check is only possible with the original document.",
