--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -1,110 +1,110 @@
 {
   "acquire-3g-ticket": {
+    "3g-proof": "3-G-Nachweis",
+    "3g-proof-birthdate": "Geburtsdatum",
+    "3g-proof-label-text": "3-G-Nachweis importieren",
+    "3g-proof-proof-from": "Von",
+    "3g-proof-status": "Status",
     "additional-information": "Sie können Ihren Nachweis einer geringen epidemiologischen Gefahr (3-G-Regel) hochladen indem Sie den entsprechenden QR-Code scannen oder ein vorhandenes PDF oder Bild mit QR-Code hochladen und sich damit ein Ticket für einen Ort ausstellen lassen. Dieses wird benötigt, um einen Ort betreten zu dürfen. Alternativ können Sie auch manuell bestätigen, dass Sie einen 3-G-Nachweis bei sich tragen und diesen im Falle einer manuellen Kontrolle nachweisen können.",
-    "qr-button-text": "QR-Code scannen",
-    "manually-button-text": "Datei hochladen",
+    "check-in-link-description": "Denken Sie auch an die Möglichkeit am Contact Tracing teilzunehmen!",
+    "confirm-button-text": "Ticket erstellen",
+    "confirm-checkbox-valid-cert-text": "Ich bestätige, dass mein Nachweis für die Dauer meines Aufenthalts gültig ist, sowie die Richtigkeit meiner Angaben, und nehme zur Kenntnis, dass jeglicher Missbrauch der App greenlight oder die Angabe falscher Daten zu rechtlichen Konsequenzen führen kann.",
+    "confirm-not-checked-body": "Bitte bestätigen Sie, dass Ihre Angaben richtig sind und dass Sie sich bewusst sind, dass der Missbrauch der App greenlight zu rechtlichen Konsequenzen führen kann.",
+    "confirm-not-checked-title": "Zustimmung nicht erteilt!",
+    "create-new-ticket": "Neues Ticket anfordern",
+    "create-ticket": "Ticket erstellen",
+    "create-ticket-success-body": "Das angeforderte Eintrittsticket für den Ort {{place}} wurde erfolgreich erstellt.",
+    "create-ticket-success-title": "Ticket erfolgreich erstellt!",
     "filepicker-button-title": "PDF oder Bild auswählen",
     "filepicker-context": "PDF oder Bild zur Überprüfung auswählen",
-    "manual-uploading-message": "Suche nach gültigem QR-Code...",
-    "place-select-title": "Ticket für",
-    "confirm-button-text": "Ticket erstellen",
-    "create-ticket": "Ticket erstellen",
-    "create-ticket-success-title": "Ticket erfolgreich erstellt!",
-    "create-ticket-success-body": "Das angeforderte Eintrittsticket für den Ort {{place}} wurde erfolgreich erstellt.",
-    "check-in-link-description": "Denken Sie auch an die Möglichkeit am Contact Tracing teilzunehmen!",
-    "manage-tickets-link": "Tickets anzeigen",
-    "manage-tickets-text": "Es wurden aktive Tickets gefunden. Sie können Ihre aktiven Tickets vorzeigen oder löschen unter: ",
-    "confirm-checkbox-valid-cert-text": "Ich bestätige, dass mein Nachweis für die Dauer meines Aufenthalts gültig ist, sowie die Richtigkeit meiner Angaben, und nehme zur Kenntnis, dass jeglicher Missbrauch der App greenlight oder die Angabe falscher Daten zu rechtlichen Konsequenzen führen kann.",
-    "3g-proof-label-text": "3-G-Nachweis importieren",
-    "remove-proof": "Nachweis entfernen",
-    "found-valid-3g-preCheck": "Es wurden lokal gespeicherte gültige 3-G-Informationen gefunden.",
     "found-valid-3g": "Es wurde ein gültiger 3-G-Nachweis importiert.",
-    "valid-till": "gültig bis ",
-    "found-valid-selftest-preCheck": "Es wurde ein lokal gespeicherter Selbsttest gefunden.",
+    "found-valid-3g-preCheck": "Es wurden lokal gespeicherte gültige 3-G-Informationen gefunden.",
     "found-valid-selftest": "Es wurde ein Selbsttest gefunden.",
+    "found-valid-selftest-preCheck": "Es wurde ein lokal gespeicherter Selbsttest gefunden.",
+    "invalid-body": "Bitte versuchen Sie es mit einem anderen Dokument noch einmal.",
     "invalid-document": "Der 3-G-Nachweis ist aktuell nicht für den Eintritt an der {{place}} gültig.",
     "invalid-document-prefix": "Technische Details: ",
-    "no-qr-code": "Kein QR-Code gefunden!",
-    "invalid-title": "Validierung fehlgeschlagen!",
-    "invalid-body": "Bitte versuchen Sie es mit einem anderen Dokument noch einmal.",
     "invalid-qr-body": "Der QR-Code enthält keinen gültigen 3-G-Nachweis.",
+    "invalid-title": "Validierung fehlgeschlagen!",
+    "manage-tickets-link": "Tickets anzeigen",
+    "manage-tickets-text": "Es wurden aktive Tickets gefunden. Sie können Ihre aktiven Tickets vorzeigen oder löschen unter: ",
+    "manual-uploading-message": "Suche nach gültigem QR-Code...",
+    "manually-button-text": "Datei hochladen",
+    "no-qr-code": "Kein QR-Code gefunden!",
     "not-same-person": "Der hochgeladene Nachweis konnte der angemeldeten Person nicht zu geordnet werden.",
+    "other-error-body": "Es ist ein unbekannter Fehler aufgetreten.",
+    "other-error-title": "Fehler!",
+    "place-select-title": "Ticket für",
+    "qr-button-text": "QR-Code scannen",
+    "remove-proof": "Nachweis entfernen",
+    "request-ticket-button-text": "Ticket anfordern",
     "self-test": "Selbsttest",
-    "self-test-link": "Link",
     "self-test-information": "Bitte überprüfen Sie ob der Nachweis noch gültig ist.",
-    "3g-proof": "3-G-Nachweis",
-    "3g-proof-status": "Status",
-    "3g-proof-proof-from": "Von",
-    "3g-proof-birthdate": "Geburtsdatum",
+    "self-test-link": "Link",
     "trust-and-save-1": "Meinen 3-G-Nachweis importieren und auf diesem Gerät speichern.",
     "trust-and-save-2": "Ihre Daten werden ausschließlich auf diesem Gerät gespeichert und verarbeitet. Es findet keine automatische Übertragung von importierten 3-G-Nachweisen zwischen Geräten statt. 3-G-Nachweise, die auf anderen Geräten importiert wurden, sind nur auf diesen verfügbar.",
-    "create-new-ticket": "Neues Ticket anfordern",
-    "request-ticket-button-text": "Ticket anfordern",
-    "confirm-not-checked-title": "Zustimmung nicht erteilt!",
-    "confirm-not-checked-body": "Bitte bestätigen Sie, dass Ihre Angaben richtig sind und dass Sie sich bewusst sind, dass der Missbrauch der App greenlight zu rechtlichen Konsequenzen führen kann.",
-    "other-error-title": "Fehler!",
-    "other-error-body": "Es ist ein unbekannter Fehler aufgetreten."
+    "valid-till": "gültig bis "
   },
-  "show-active-tickets": {
-    "entry-ticket": "Eintrittsticket",
-    "no-tickets-message": "Sie besitzen derzeit keine Tickets!",
-    "delete-btn-text": "Löschen",
-    "show-btn-text": "Zeigen",
-    "show-ticket-title": "Ticket: ",
-    "delete-ticket-success-title": "Ticket erfolgreich gelöscht!",
-    "delete-ticket-success-body": "Das Ticket für den Ort {{place}} wurde erfolgreich gelöscht.",
-    "other-error-title": "Fehler!",
-    "other-error-body": "Es ist ein unbekannter Fehler aufgetreten.",
-    "3g-evidence": "3-G-Nachweis: Grüner Pass gefunden",
-    "no-3g-evidence": "Kein 3-G-Nachweis gefunden",
-    "self-test-found": "3-G-Nachweis: Selbsttest gefunden",
-    "self-test-information": "Bitte überprüfen Sie ob der Nachweis noch gültig ist.",
-    "self-test": "Selbsttest",
-    "self-test-link": "Link zum Test",
-    "no-evidence": "Es wurde kein gültiger gespeicherter 3-G-Nachweis gefunden. Zeigen Sie ihren Nachweis manuell vor oder laden Sie einen neuen Nachweis hoch, indem Sie ein neues Ticket erstellen.",
-    "invalid-evidence": "Falls der 3-G-Nachweis nicht mehr gültig ist, können Sie ein neues Ticket erstellen und einen neuen Nachweis hochladen.",
-    "delete-ticket-notfound-title": "Ticket nicht gefunden!",
-    "delete-ticket-notfound-body": "Es wurde keine aktives Ticket: {{place}} gefunden. Das Ticket ist warscheinlich schon abgelaufen oder gelöscht.",
-    "logged-out-title": "Sitzung abgelaufen!",
-    "logged-out-body": "Die Sitzung ist abgelaufen. Bitte melden Sie sich erneut an.",
-    "status": "Status: ",
-    "loading-message-ticket": "Ticket wird geladen ...",
-    "status-active": "aktiv",
-    "3-g-evidence": "3-G-Nachweis",
-    "3-g-evidence-green-pass-valid": "grüner Pass auf diesem Gerät importiert und gültig",
-    "3-g-evidence-selftest": "Selbsttest auf diesem Gerät importiert, manuelle Kontrolle notwendig",
-    "3-g-evidence-internal-test": "Universitäts interner Test auf diesem Gerät importiert und gültig",
-    "status-inactive": "inaktiv",
-    "3-g-evidence-invalid": "kein Gültiger 3-G-Nachweis auf diesem Gerät gefunden",
-    "3-g-evidence-invalid-text": "Eventuell haben Sie Ihren Nachweis auf einem anderen Gerät importiert, der Nachweis ist nicht mehr gültig oder die Applikation wurde für einen längeren Zeitraum nicht genutzt.",
-    "3-g-evidence-maximize-saving": "Fügen Sie die App auf dem Startbildschirm Ihres Smartphones hinzu, um die Speicherdauer des 3-G-Nachweises zu maximieren.",
-    "new-ticket": "Neues Ticket anfordern",
-    "internal-test-found": "Universitätsinterner Test gefunden",
-    "internal-test-text": "Der universitätsinterne Test wurde beim Import validiert. Eine manuelle Kontrolle ist nur mit dem Originaldokument möglich.",
-    "image-alt-text": "Ticketfoto",
-    "reload-error-title": "Aktualisierung fehlgeschlagen",
-    "reload-error-body": "Die Aktualisierung schlug fehl. Prüfen Sie Ihre Internetverbindung, loggen Sie sich neu ein oder probieren Sie es später noch einmal.",
-    "reload": "Aktualisieren"
-  },
-  "show-reference-ticket": {
-    "place-name": "Ort",
-    "active": "aktiv",
-    "inactive": "inaktiv",
-    "description": "An dieser Stelle wird die Gültigkeit eines Eintrittstickets angezeigt. Ob ein Ticket aktiv oder inaktiv ist, hängt von dem 3-G-Nachweis ab, der auf dem Gerät der kontrollierten Person importiert ist. Das Referenzticket berechtigt nicht zum Eintritt an die Universität.",
-    "information-container-headline": "Informationen zum 3-G-Nachweis",
-    "information-container-body": " Ist ein gültiger grüner Pass auf dem Gerät importiert, wird dessen QR-Code angezeigt und das Ticket in Farbe dargestellt. Der QR-Code kann mit Greencheck validiert werden. Ist ein Selbsttest des Landes Steiermark oder Kärnten auf dem Gerät importiert, wird dessen QR-Code angezeigt und das Ticket in Graustufen dargestellt. Dieser QR-Code kann nicht in greenlight validiert werden, daher muss die Kontrolle mit einem QR-Code Scanner erfolgen. Ist ein gültiger Test der Teststraße der TU Graz auf dem Gerät importiert, wird das Ticket in Farbe dargestellt. Die manuelle Validierung dieses Tests kann nur mit dem Originaldokument erfolgen."
-  },
-  "validity-tooltip": "Nach den aktuellen Bestimmungen der {{place}}. Die Gültigkeitsdauer wird bei einer Änderung der Bestimmungen automatisch aktualisiert.",
-  "valid-till": "Voraussichtlich gültig bis ",
   "date-time": "{{clock}} Uhr am {{date}}",
   "error-login-message": "Sie müssen angemeldet sein um diese Funktion nutzen zu können!",
-  "loading-message": "Lädt...",
-  "error-permission-message": "Diese Applikation ist aktuell nur für Studierende verfügbar!",
   "file-sink": {
     "modal-close": "Schließen"
   },
   "hcert": {
     "cert-not-valid-error": "Erfüllt nicht die folgenden Regeln: {{error}}",
     "cert-validation-failed-error": "Validierung fehlgeschlagen: {{error}}"
-  }
+  },
+  "loading-message": "Lädt...",
+  "reload-failed": " Automatische Aktualisierung fehlgeschlagen",
+  "show-active-tickets": {
+    "3-g-evidence": "3-G-Nachweis",
+    "3-g-evidence-green-pass-valid": "grüner Pass auf diesem Gerät importiert und gültig",
+    "3-g-evidence-internal-test": "Universitäts interner Test auf diesem Gerät importiert und gültig",
+    "3-g-evidence-invalid": "kein Gültiger 3-G-Nachweis auf diesem Gerät gefunden",
+    "3-g-evidence-invalid-text": "Eventuell haben Sie Ihren Nachweis auf einem anderen Gerät importiert, der Nachweis ist nicht mehr gültig oder die Applikation wurde für einen längeren Zeitraum nicht genutzt.",
+    "3-g-evidence-maximize-saving": "Fügen Sie die App auf dem Startbildschirm hinzu, um die Speicherdauer des 3-G-Nachweises zu maximieren.",
+    "3-g-evidence-selftest": "Selbsttest auf diesem Gerät importiert, manuelle Kontrolle notwendig",
+    "3g-evidence": "3-G-Nachweis: Grüner Pass gefunden",
+    "delete-btn-text": "Löschen",
+    "delete-ticket-notfound-body": "Es wurde keine aktives Ticket: {{place}} gefunden. Das Ticket ist warscheinlich schon abgelaufen oder gelöscht.",
+    "delete-ticket-notfound-title": "Ticket nicht gefunden!",
+    "delete-ticket-success-body": "Das Ticket für den Ort {{place}} wurde erfolgreich gelöscht.",
+    "delete-ticket-success-title": "Ticket erfolgreich gelöscht!",
+    "entry-ticket": "Eintrittsticket",
+    "image-alt-text": "Ticketfoto",
+    "internal-test-found": "Universitätsinterner Test gefunden",
+    "internal-test-text": "Der universitätsinterne Test wurde beim Import validiert. Eine manuelle Kontrolle ist nur mit dem Originaldokument möglich.",
+    "invalid-evidence": "Falls der 3-G-Nachweis nicht mehr gültig ist, können Sie ein neues Ticket erstellen und einen neuen Nachweis hochladen.",
+    "loading-message-ticket": "Ticket wird geladen ...",
+    "logged-out-body": "Die Sitzung ist abgelaufen. Bitte melden Sie sich erneut an.",
+    "logged-out-title": "Sitzung abgelaufen!",
+    "new-ticket": "Neues Ticket anfordern",
+    "no-3g-evidence": "Kein 3-G-Nachweis gefunden",
+    "no-evidence": "Es wurde kein gültiger gespeicherter 3-G-Nachweis gefunden. Zeigen Sie ihren Nachweis manuell vor oder laden Sie einen neuen Nachweis hoch, indem Sie ein neues Ticket erstellen.",
+    "no-tickets-message": "Sie besitzen derzeit keine Tickets!",
+    "other-error-body": "Es ist ein unbekannter Fehler aufgetreten.",
+    "other-error-title": "Fehler!",
+    "reload": "Aktualisieren",
+    "reload-error-body": "Die Aktualisierung schlug fehl. Prüfen Sie Ihre Internetverbindung, loggen Sie sich neu ein oder probieren Sie es später noch einmal.",
+    "reload-error-title": "Aktualisierung fehlgeschlagen",
+    "self-test": "Selbsttest",
+    "self-test-found": "3-G-Nachweis: Selbsttest gefunden",
+    "self-test-information": "Bitte überprüfen Sie ob der Nachweis noch gültig ist.",
+    "self-test-link": "Link zum Test",
+    "show-btn-text": "Zeigen",
+    "show-ticket-title": "Ticket: ",
+    "status": "Status: ",
+    "status-active": "aktiv",
+    "status-inactive": "inaktiv"
+  },
+  "show-reference-ticket": {
+    "active": "aktiv",
+    "description": "An dieser Stelle wird die Gültigkeit eines Eintrittstickets angezeigt. Ob ein Ticket aktiv oder inaktiv ist, hängt von dem 3-G-Nachweis ab, der auf dem Gerät der kontrollierten Person importiert ist. Das Referenzticket berechtigt nicht zum Eintritt an die Universität.",
+    "inactive": "inaktiv",
+    "information-container-body": " Ist ein gültiger grüner Pass auf dem Gerät importiert, wird dessen QR-Code angezeigt das Ticket in Farbe dargestellt. Der QR-Code kann mit Greencheck validiert werden. Ist ein Selbsttest des Landes Steiermark oder Kärnten auf dem Gerät importiert, wird dessen QR-Code angezeigt und das Ticket in Graustufen dargestellt. Dieser QR-Code kann nicht in greenlight validiert werden, daher muss die Kontrolle mit einem QR-Code Scanner erfolgen. Ist ein gültiger Test der Teststraße der TU Graz auf dem Gerät importiert, wird das Ticket in Farbe dargestellt. Die manuelle Validierung dieses Tests kann nur mit dem Originaldokument erfolgen.",
+    "information-container-headline": "Informationen zum 3-G-Nachweis",
+    "place-name": "Ort"
+  },
+  "valid-till": "Voraussichtlich gültig bis ",
+  "validity-tooltip": "Nach den aktuellen Bestimmungen der {{place}}. Die Gültigkeitsdauer wird bei einer Änderung der Bestimmungen automatisch aktualisiert."
 }
