--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -1,110 +1,110 @@
 {
   "acquire-3g-ticket": {
+    "3g-proof": "3-G-evidence",
+    "3g-proof-birthdate": "Birthdate",
+    "3g-proof-label-text": "Import 3-G-evidence",
+    "3g-proof-proof-from": "From",
+    "3g-proof-status": "Status",
     "additional-information": "You can scan a QR code or upload an existing PDF or image to use it to log in directly at a location for a certain period of time. This is needed to be allowed to enter a location. Alternatively, you can manually confirm that you are carrying 3-G-evidence and be able to prove it in case of a manual control.",
-    "qr-button-text": "Scan QR code",
-    "manually-button-text": "Upload File",
+    "check-in-link-description": "Also consider using contact tracing!",
+    "confirm-button-text": "Create a Ticket",
+    "confirm-checkbox-valid-cert-text": "I confirm the accuracy of my evidence and understand that any misuse of the greenlight app or the provision of incorrect data can lead to legal consequences.",
+    "confirm-not-checked-body": "Please confirm that the information you have provided is correct and that you are aware that misuse of the greenlight app may lead to legal consequences",
+    "confirm-not-checked-title": "Consent not given!",
+    "create-new-ticket": "Request new ticket",
+    "create-ticket": "Create ticket",
+    "create-ticket-success-body": "The acquired entrance ticket for {{place}} was successfully created.",
+    "create-ticket-success-title": "Ticket successfully created!",
     "filepicker-button-title": "Choose File",
     "filepicker-context": "Choose File for 3-G Verification",
-    "manual-uploading-message": "Search for valid QR code...",
-    "place-select-title": "Select a place",
-    "confirm-button-text": "Create a Ticket",
-    "create-ticket": "Create ticket",
-    "create-ticket-success-title": "Ticket successfully created!",
-    "create-ticket-success-body": "The acquired entrance ticket for {{place}} was successfully created.",
-    "check-in-link-description": "Also consider using contact tracing!",
-    "manage-tickets-link": "Show tickets",
-    "manage-tickets-text": "Active tickets could be found. You can manage your active tickets at: ",
-    "confirm-checkbox-valid-cert-text": "I confirm the accuracy of my evidence and understand that any misuse of the greenlight app or the provision of incorrect data can lead to legal consequences.",
-    "3g-proof-label-text": "Import 3-G-evidence",
-    "valid-till": "valid until ",
-    "remove-proof": "Remove evidence",
-    "found-valid-3g-preCheck": "Stored valid 3-G-evidence could be found.",
     "found-valid-3g": "A valid 3-G-evidence was imported.",
-    "found-valid-selftest-preCheck": "A locally saved self-test was found.",
+    "found-valid-3g-preCheck": "Stored valid 3-G-evidence could be found.",
     "found-valid-selftest": "A self-test was found.",
+    "found-valid-selftest-preCheck": "A locally saved self-test was found.",
+    "invalid-body": "Please try again with another document.",
     "invalid-document": "3-G-evidence is currently not valid for {{place}}.",
     "invalid-document-prefix": "Technical details: ",
-    "no-qr-code": "No QR code found!",
-    "invalid-title": "Validation failed!",
-    "invalid-body": "Please try again with another document.",
     "invalid-qr-body": "The QR code does not contain a valid 3-G-evidence.",
+    "invalid-title": "Validation failed!",
+    "manage-tickets-link": "Show tickets",
+    "manage-tickets-text": "Active tickets could be found. You can manage your active tickets at: ",
+    "manual-uploading-message": "Search for valid QR code...",
+    "manually-button-text": "Upload File",
+    "no-qr-code": "No QR code found!",
     "not-same-person": "The person in the uploaded evidence does not match the person logged in.",
+    "other-error-body": "An unknown error has occurred.",
+    "other-error-title": "Error!",
+    "place-select-title": "Select a place",
+    "qr-button-text": "Scan QR code",
+    "remove-proof": "Remove evidence",
+    "request-ticket-button-text": "Request ticket",
     "self-test": "Selftest",
-    "self-test-link": "Link",
     "self-test-information": "Please check whether the evidence is still valid.",
-    "3g-proof": "3-G-evidence",
-    "3g-proof-status": "Status",
-    "3g-proof-proof-from": "From",
-    "3g-proof-birthdate": "Birthdate",
+    "self-test-link": "Link",
     "trust-and-save-1": "I agree to import my 3-G-evidence and store this data on my device.",
     "trust-and-save-2": "Your data is stored and processed exclusively on this device. There is no automatic transfer of imported 3-G-evidence between devices. 3-G-evidence imported on other devices is only available on these devices.",
-    "create-new-ticket": "Request new ticket",
-    "request-ticket-button-text": "Request ticket",
-    "confirm-not-checked-title": "Consent not given!",
-    "confirm-not-checked-body": "Please confirm that the information you have provided is correct and that you are aware that misuse of the greenlight app may lead to legal consequences",
-    "other-error-title": "Error!",
-    "other-error-body": "An unknown error has occurred."
+    "valid-till": "valid until "
   },
-  "show-active-tickets": {
-    "entry-ticket": "Entry Ticket",
-    "no-tickets-message": "You do not have any tickets!",
-    "delete-btn-text": "Delete",
-    "show-btn-text": "Show",
-    "show-ticket-title": "Ticket: ",
-    "delete-ticket-success-title": "Ticket successfully deleted!",
-    "delete-ticket-success-body": "The ticket for {{place}} was successfully deleted.",
-    "other-error-title": "Error!",
-    "other-error-body": "An unknown error occurred.",
-    "3g-evidence": "3-G-evidence: Found Green Pass",
-    "no-3g-evidence": "No 3-G-evidence found",
-    "self-test-found": "3-G-evidence: Self-test found",
-    "self-test-information": "Please check whether the evidence is still valid.",
-    "self-test": "self-test",
-    "self-test-link": "Link to the test",
-    "no-evidence": "No valid stored 3-G-evidence was found. Show your evidence manually or upload new evidence by creating a new ticket.",
-    "invalid-evidence": "If the 3-G-evidence is no longer valid, you can create a new ticket and upload a new evidence.",
-    "delete-ticket-notfound-title": "Ticket not found!",
-    "delete-ticket-notfound-body": "No active ticket: {{place}} was found. The ticket has probably already expired or deleted.",
-    "logged-out-title": "Session expired!",
-    "logged-out-body": "The session has expired. Please log in again.",
-    "status": "Status: ",
-    "loading-message-ticket": "Loading the ticket ...",
-    "status-active": "active",
-    "3-g-evidence": "3-G-evidence",
-    "3-g-evidence-green-pass-valid": "Green passport imported and valid on this device",
-    "3-g-evidence-selftest": "Self-test imported on this device, manual control necessary",
-    "3-g-evidence-internal-test": "University internal test imported on this device and valid",
-    "status-inactive": "inactive",
-    "3-g-evidence-invalid": "No valid 3-G evidence found on this device",
-    "3-g-evidence-invalid-text": "You may have imported your evidence on another device, the evidence is no longer valid or the application has not been used for a longer period of time.",
-    "3-g-evidence-maximize-saving": "Add the app to the home screen of your smartphone to maximize the storage time of the 3-G evidence. How to do this you can read ",
-    "new-ticket": "Request a new ticket",
-    "internal-test-found": "University-internal test found",
-    "internal-test-text": "The university-internal test was validated during the import. A manual check is only possible with the original document.",
-    "image-alt-text": "Ticket image",
-    "reload-error-title": "Update failed",
-    "reload-error-body": "The update failed. Check your internet connection, log in again or try again later.",
-    "reload": "Refresh"
-  },
-  "show-reference-ticket": {
-    "place-name": "Place",
-    "active": "activ",
-    "inactive": "inactiv",
-    "description": "At this point the validity of an entrance ticket is displayed. Whether a ticket is active or inactive depends on the 3-G evidence imported on the controlled person's device. The reference ticket does not entitle you to enter the university.",
-    "information-container-headline": "Information about 3-G evidence",
-    "information-container-body": " If a valid health certitificate is available on this device then its QR-code is displayed and the ticket is shown in color. This QR-code can be checked with Green Check. If a self-test that was issued by Land Steiermark or Land Kärnten is available on this device then its QR-code is displayed and the ticket is shown in black and white. This QR-code cannot be validated by this app, therefore its validation requires a QR-code scanner. If a valid test made by Teststraße of TU Graz is available on this device then the ticket is shown in color. Manual validation of this test can only be done with the original document."
-  },
-  "validity-tooltip": "According to the current regulations of {{place}}. The validity period is automatically updated when the regulations change.",
-  "valid-till": "Probably valid until: ",
   "date-time": "{{clock}} on {{date}}",
   "error-login-message": "You need to be logged in to use this function!",
-  "loading-message": "Loading...",
-  "error-permission-message": "This application is currently only available for students!",
   "file-sink": {
     "modal-close": "Close"
   },
   "hcert": {
     "cert-not-valid-error": "Does not comply with the following rules: {{error}}",
     "cert-validation-failed-error": "Validation failed: {{error}}"
-  }
+  },
+  "loading-message": "Loading...",
+  "reload-failed": "Automatic update failed",
+  "show-active-tickets": {
+    "3-g-evidence": "3-G-evidence",
+    "3-g-evidence-green-pass-valid": "Green passport imported and valid on this device",
+    "3-g-evidence-internal-test": "University internal test imported on this device and valid",
+    "3-g-evidence-invalid": "No valid 3-G evidence found on this device",
+    "3-g-evidence-invalid-text": "You may have imported your evidence on another device, the evidence is no longer valid or the application has not been used for a longer period of time.",
+    "3-g-evidence-maximize-saving": "Add the app to the home screen to maximize the storage time of the 3-G evidence. How to do this you can read ",
+    "3-g-evidence-selftest": "Self-test imported on this device, manual control necessary",
+    "3g-evidence": "3-G-evidence: Found Green Pass",
+    "delete-btn-text": "Delete",
+    "delete-ticket-notfound-body": "No active ticket: {{place}} was found. The ticket has probably already expired or deleted.",
+    "delete-ticket-notfound-title": "Ticket not found!",
+    "delete-ticket-success-body": "The ticket for {{place}} was successfully deleted.",
+    "delete-ticket-success-title": "Ticket successfully deleted!",
+    "entry-ticket": "Entry Ticket",
+    "image-alt-text": "Ticket image",
+    "internal-test-found": "University-internal test found",
+    "internal-test-text": "The university-internal test was validated during the import. A manual check is only possible with the original document.",
+    "invalid-evidence": "If the 3-G-evidence is no longer valid, you can create a new ticket and upload a new evidence.",
+    "loading-message-ticket": "Loading the ticket ...",
+    "logged-out-body": "The session has expired. Please log in again.",
+    "logged-out-title": "Session expired!",
+    "new-ticket": "Request a new ticket",
+    "no-3g-evidence": "No 3-G-evidence found",
+    "no-evidence": "No valid stored 3-G-evidence was found. Show your evidence manually or upload new evidence by creating a new ticket.",
+    "no-tickets-message": "You do not have any tickets!",
+    "other-error-body": "An unknown error occurred.",
+    "other-error-title": "Error!",
+    "reload": "Refresh",
+    "reload-error-body": "The update failed. Check your internet connection, log in again or try again later.",
+    "reload-error-title": "Update failed",
+    "self-test": "self-test",
+    "self-test-found": "3-G-evidence: Self-test found",
+    "self-test-information": "Please check whether the evidence is still valid.",
+    "self-test-link": "Link to the test",
+    "show-btn-text": "Show",
+    "show-ticket-title": "Ticket: ",
+    "status": "Status: ",
+    "status-active": "active",
+    "status-inactive": "inactive"
+  },
+  "show-reference-ticket": {
+    "active": "activ",
+    "description": "At this point the validity of an entrance ticket is displayed. Whether a ticket is active or inactive depends on the 3-G evidence imported on the controlled person\u0027s device. The reference ticket does not entitle you to enter the university.",
+    "inactive": "inactiv",
+    "information-container-body": " If a valid health certitificate is available on this device then its QR-code is displayed and the ticked is shown in color. This QR-code can be checked with Green Check. If a self-test was issued by Land Steiermark or Land Kärnten is available on this device then its QR-code is displayed and the ticket is shown in black and white. This QR-code cannot be validated by this app, therefore its validation requires a QR-code scanner. If a valid test made by Teststraße of TU Graz is available on this device then the ticket is shown in color. Manual validation of this test can only be done with the original document.",
+    "information-container-headline": "Information about 3-G evidence",
+    "place-name": "Place"
+  },
+  "valid-till": "Probably valid until ",
+  "validity-tooltip": "According to the current regulations of {{place}}. The validity period is automatically updated when the regulations change."
 }
